--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>libre-store</title>
+    <title>Pebble Libre Store</title>
+    <link href="/static/css/bootstrap.min-4.0.0-alpha.5.css" rel="stylesheet" media="screen" />
+    <link href="/static/css/pebble-fonts.css" rel="stylesheet" media="screen" />
+    <script src="/static/js/jquery-3.1.1.min.js"></script>
+    <script src="/static/js/bootstrap-4.0.0-alpha.5.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
